included subdomain resolving

--- a/TicketViewer.App.CLI/appsettings.json
+++ b/TicketViewer.App.CLI/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
+  "ZendeskSubdomainName": "zccbsportive.zendesk.com",
   "Username": "bhishma.sukhavasi@gmail.com",
   "Password": "Bhishma@16"
 }
