fixed few naming conventions

--- a/TicketViewer.App.CLI/appsettings.json
+++ b/TicketViewer.App.CLI/appsettings.json
@@ -3,6 +3,6 @@
   "ZendeskAuthType": "TokenBased", // Values: "Basic", "TokenBased"
   "ZendeskAccessToken": "__ZendeskAccessToken__",
   // Provide either access token or username & password based on the provided AuthType
-  "ZendeskUsername": "__ZendeskUsername__",
+  "ZendeskEmail": "__ZendeskEmail__",
   "ZendeskPassword": "__ZendeskPassword__"
 }
